coded baseplate and added icons

--- a/index.html
+++ b/index.html
@@ -4,8 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="base">
+        <div class="right-images">
+            right images
+        </div>
+
+
+        <div class="content">
+
+        <div class="socials">
+            <ul class="icons-list">
+                <li>
+                    <img class="icon" src="images/icons/facebook.png">
+                </li>
+                <li>
+                    <img class="icon" src="images/icons/instagram.png">
+                </li>
+                <li>
+                    <img class="icon" src="images/icons/linkedin.png">
+                </li>
+                <li>
+                    <img class="icon" src="images/icons/twitter.png">
+                </li>
+                <li>
+                    <img class="icon" src="images/icons/youtube.png">
+                </li>
+            </ul>
+        </div>
+
+            <div class="name">
+                Hanveesh
+            </div>
+            <div class="description">
+                description
+            </div>
+        <div class="see-more-button">
+            <button>see-more</button>
+        </div>            
+        </div>
+        <div class="left-images">
+            left-images
+        </div>
+
+    </div>
 </body>
 </html>
