added all the images needed for hero page

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <div class="description">
                 description
             </div>
-        <div class="see-more-button">
-            <button>see-more</button>
+        <div class="see-more-section">
+            <button class="see-more-button">See more</button>
         </div>            
         </div>
         <div class="left-images">
